<resources>
    <string name="app_name">蜗牛员工</string>
    <!--下划线-->
    <string name="user_tk"><u>《蜗牛顾家用户使用条款》</u></string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="login_only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>

    <!-- 请替换成在语音云官网申请的appid -->
    <string name="app_id">58db7233</string>
    <!-- 听写 -->
    <string name="text_begin">请开始说话…</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="scan">扫一扫</string>
    <string name="write_off">注销</string>
    <string name="accept">收件</string>
    <string name="send">寄件</string>
    <string name="abnormal_package">异常包裹</string>
    <string name="beyond_parcel">超期包裹</string>
    <string name="collection_delivery">代收货款</string>
    <string name="sign_in_out">签到/签退</string>
    <string name="undistributed_task">未分配任务</string>
    <string name="more">更多</string>
    <string name="received_information">已收件信息</string>
    <string name="sent_message">已寄件信息</string>
    <string name="no_unassigned_task">暂无未分配任务</string>
    <string name="no_received_information">暂无已收件信息</string>
    <string name="no_sent_message">暂无已寄件信息</string>
    <string name="cancel">取消</string>
    <string name="accept_information_entry">收件信息录入</string>
    <string name="import_phone_electronic_package_number">请输入用户手机号或电子包裹箱号</string>
    <string name="import_accept_name">请输入收件人姓名</string>
    <string name="house_number">门牌号</string>
    <string name="please_select">请选择</string>
    <string name="accept_address">收件人地址为：</string>
    <string name="confirm_message">确认信息</string>
    <string name="carrier_source">承运来源：</string>
    <string name="tracking_number">快递单号：</string>
    <string name="select_container_number">请选择货柜编号</string>
    <string name="container_number">货柜编号</string>
    <string name="confirm_inventory">确认入库</string>
    <string name="confirm_delivery">确认出库</string>
    <string name="information_collection">信息收集</string>
    <string name="taobao">淘宝</string>
    <string name="tmall">天猫</string>
    <string name="jdcom">京东</string>
    <string name="suning">苏宁易购</string>
    <string name="vipshop">唯品会</string>
    <string name="one_shop">1号店</string>
    <string name="dangdang_com">当当网</string>
    <string name="rests">其他</string>
    <string name="ordering_platform">订购平台：</string>
    <string name="product_type">产品类型：</string>
    <string name="food">食品</string>
    <string name="garment">服装</string>
    <string name="file">文件</string>
    <string name="daily_necessities">日用品</string>
    <string name="input_information">输入信息</string>
    <string name="express_delivery">寄快递</string>
    <string name="receive_delivery">收快递</string>
    <string name="sender">寄件人：</string>
    <string name="sender_title">寄件人</string>
    <string name="add_sender">请添加寄件人</string>
    <string name="recipients">收件人：</string>
    <string name="recipients_title">收件人</string>
    <string name="add_recipient">请添加收件人</string>
    <string name="stdmode">物品类型</string>
    <string name="select_stdmode">请选择物品类型</string>
    <string name="carrier_company">承运公司</string>
    <string name="select_carrier_company">请选择承运公司</string>
    <string name="card_no">身份证号码</string>
    <string name="import_card_no">请输入身份证号码</string>
    <string name="card_no_real_ame_authentication">邮寄包裹时需要有效的身份证号码，快递实名制</string>
    <string name="delivery_details">快递详情</string>
    <string name="confirm_send">确认寄件</string>
    <string name="sender_information">寄件人信息</string>
    <string name="recipient_information">收件人信息</string>
    <string name="pack_up">收起</string>
    <string name="import_package_weight">请输入包裹重量(kg)</string>
    <string name="charge">收费</string>
    <string name="search">搜索...</string>
    <string name="results_query">业绩查询</string>
    <string name="handover">交接工作</string>
    <string name="grab_single">抢单啦！</string>
    <string name="allocated_package">已分配包裹</string>
    <string name="qr_code">扫码</string>
    <string name="take_picture">拍照</string>
    <string name="album_selection">从相册选择</string>
    <string name="system_prompt">系统提示</string>
    <string name="confirm">确定</string>
    <string name="sender_phone_number">寄件人手机号：</string>
    <string name="take_their">自提</string>
    <string name="enter_phone_number">请输入您的手机号</string>
    <string name="get_code">获取验证码</string>
    <string name="verification_code">验证码</string>
    <string name="you_have_read_and_agreed">您已阅读并同意</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="station_master">站长</string>
    <string name="staff">员工</string>
    <string name="security_guard">保安/保洁</string>
    <string name="name">姓名</string>
    <string name="mobile">手机号</string>
    <string name="click_add_profil">点击添加头像:</string>
    <string name="submit">提交</string>
    <string name="select_address">选择地址</string>
    <string name="go_back">返回</string>
    <string name="no_mail_package">暂无寄件包裹</string>
    <string name="on_distribution_package">暂无已分配包裹</string>
    <string name="application_by">申请寄件</string>
    <string name="import_name">请输入名字</string>
    <string name="import_mobile">请输入手机号</string>
    <string name="chelsea">所在地区</string>
    <string name="select_area">请选择所在地区</string>
    <string name="detailed_address">详细地址</string>
    <string name="import_detailed_address">请输入详细地址</string>
    <string name="move_and_scale">移动和缩放</string>
    <string name="choose">选取</string>
    <string name="open_flashlight">打开照明灯</string>
    <string name="close_flashlight">关闭照明灯</string>
    <string name="camera">相册</string>
    <string name="rephotograph">重拍</string>
</resources>
