<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_staff_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cl_6fd1c8"
    android:fitsSystemWindows="true"
    tools:context=".ui.StaffInformationCollectionActivity">

    <RelativeLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_96"
        android:background="@color/cl_6fd1c8">

        <ImageView
            android:padding="@dimen/px_20"
            android:id="@+id/return_arrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px_12"
            android:src="@mipmap/left_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/information_collection"
            android:textColor="@color/white"
            android:textSize="@dimen/px_36"
            android:textStyle="normal" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/one"
        android:background="@color/cl_f5f5f5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_30"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px_32"
                android:layout_marginTop="@dimen/px_30"
                android:text="@string/ordering_platform"
                android:textColor="@color/cl_333333"
                android:textSize="@dimen/px_30" />

            <com.example.me_jie.snailexpress_staff.custom.RadioGroup
                android:id="@+id/radioGroup_goodsSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px_20"
                android:gravity="center_vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/px_90"

                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/tb"
                        android:layout_width="@dimen/px_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:button="@drawable/alipay_radio_style"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/px_40"
                        android:text="@string/taobao"
                        android:textColor="@color/cl_333333"
                        android:textSize="@dimen/px_28" />

                    <RadioButton
                        android:id="@+id/tm"
                        android:layout_width="@dimen/px_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:button="@drawable/alipay_radio_style"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/px_40"
                        android:text="@string/tmall"
                        android:textColor="@color/cl_333333"
                        android:textSize="@dimen/px_28" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/px_90"

                    android:layout_marginTop="@dimen/px_40"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/jd"
                        android:layout_width="@dimen/px_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:button="@drawable/alipay_radio_style"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/px_40"
                        android:text="@string/jdcom"
                        android:textColor="@color/cl_333333"
                        android:textSize="@dimen/px_28" />

                    <RadioButton
                        android:id="@+id/snyg"
                        android:layout_width="@dimen/px_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:button="@drawable/alipay_radio_style"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/px_40"
                        android:text="@string/suning"
                        android:textColor="@color/cl_333333"
                        android:textSize="@dimen/px_28" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/px_90"
                    android:layout_marginTop="@dimen/px_40"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/wph"
                        android:layout_width="@dimen/px_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:button="@drawable/alipay_radio_style"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/px_40"
                        android:text="@string/vipshop"
                        android:textColor="@color/cl_333333"
                        android:textSize="@dimen/px_28" />

                    <RadioButton
                        android:id="@+id/yhd"
                        android:layout_width="@dimen/px_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:button="@drawable/alipay_radio_style"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/px_40"
                        android:text="@string/one_shop"
                        android:textColor="@color/cl_333333"
                        android:textSize="@dimen/px_28" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/px_90"
                    android:layout_marginTop="@dimen/px_40"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/ddw"
                        android:layout_width="@dimen/px_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:button="@drawable/alipay_radio_style"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/px_40"
                        android:text="@string/dangdang_com"
                        android:textColor="@color/cl_333333"
                        android:textSize="@dimen/px_28" />

                    <RadioButton
                        android:id="@+id/qt"
                        android:layout_width="@dimen/px_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:button="@drawable/alipay_radio_style"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/px_40"
                        android:text="@string/rests"
                        android:textColor="@color/cl_333333"
                        android:textSize="@dimen/px_28" />

                </LinearLayout>


            </com.example.me_jie.snailexpress_staff.custom.RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px_32"
                android:layout_marginTop="@dimen/px_70"
                android:text="@string/product_type"
                android:textColor="@color/cl_333333"
                android:textSize="@dimen/px_30" />

            <com.example.me_jie.snailexpress_staff.custom.RadioGroup
                android:id="@+id/radioGroup_goodsType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_40"
                android:layout_marginLeft="@dimen/px_90"
                android:layout_marginTop="@dimen/px_20"
                android:background="@color/transparence"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparence"
                        android:button="@drawable/alipay_radio_style"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/px_40"
                        android:text="@string/food"
                        android:textColor="@color/cl_333333"
                        android:textSize="@dimen/px_28" />

                    <RadioButton
                        android:id="@+id/fz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px_40"
                        android:background="@color/transparence"
                        android:button="@drawable/alipay_radio_style"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/px_40"
                        android:text="@string/garment"
                        android:textColor="@color/cl_333333"
                        android:textSize="@dimen/px_28" />

                    <RadioButton
                        android:id="@+id/wj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px_40"
                        android:background="@color/transparence"
                        android:button="@drawable/alipay_radio_style"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/px_40"
                        android:text="@string/file"
                        android:textColor="@color/cl_333333"
                        android:textSize="@dimen/px_28" />

                    <RadioButton
                        android:id="@+id/ryp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px_40"
                        android:background="@color/transparence"
                        android:button="@drawable/alipay_radio_style"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/px_40"
                        android:text="@string/daily_necessities"
                        android:textColor="@color/cl_333333"
                        android:textSize="@dimen/px_28" />
                </LinearLayout>
            </com.example.me_jie.snailexpress_staff.custom.RadioGroup>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/input_information_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_96"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/cl_6fd1c8"
        android:gravity="center"
        android:text="@string/input_information"
        android:textColor="@color/white"
        android:textSize="@dimen/px_32" />
</RelativeLayout>
