<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/circle"
            android:scaleType="fitXY"
            android:layout_marginTop="@dimen/px_110"
            android:layout_marginBottom="@dimen/px_120"
            android:layout_centerHorizontal="true"
            android:src="@drawable/circle_shape"
            android:layout_width="@dimen/px_140"
            android:layout_height="@dimen/px_140" />
        <EditText
            android:layout_toLeftOf="@+id/verify_btn"
            android:id="@+id/sr_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/circle"
            android:paddingBottom="@dimen/px_30"
            android:layout_marginLeft="@dimen/px_32"
            android:layout_marginTop="@dimen/px_60"
            android:background="@null"
            android:drawableLeft="@mipmap/ipone_icon"
            android:drawablePadding="@dimen/px_30"
            android:hint="@string/enter_phone_number"
            android:inputType="phone|number"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/cl_333333"
            android:textColorHint="@color/cl_b3b3b3"
            android:textCursorDrawable="@drawable/edit_cursor"
            android:textSize="@dimen/px_30" />
        <Button
            android:id="@+id/verify_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/px_32"
            android:text="@string/get_code"
            android:layout_marginBottom="@dimen/px_15"
            android:layout_above="@+id/line"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/px_32"
            android:background="@drawable/verify_btn_shape_sel"
            android:layout_width="@dimen/px_214"
            android:layout_height="@dimen/px_62" />

        <View
            android:id="@+id/line"
            android:layout_marginLeft="@dimen/px_30"
            android:background="@color/cl_e3e3e3"
            android:layout_below="@+id/sr_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"/>
        <EditText
            android:paddingBottom="@dimen/px_30"
            android:maxLength="6"
            android:singleLine="true"
            android:inputType="phone|number"
            android:textCursorDrawable="@drawable/edit_cursor"
            android:layout_marginTop="@dimen/px_30"
            android:layout_marginLeft="@dimen/px_30"
            android:drawableLeft="@mipmap/dun_icon"
            android:id="@+id/sr_verification"
            android:layout_below="@id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/px_30"
            android:hint="@string/verification_code"
            android:textColor="@color/cl_333333"
            android:textColorHint="@color/cl_b3b3b3"
            android:background="@null"
            android:drawablePadding="@dimen/px_30"
            />
    </RelativeLayout>

    <LinearLayout
        android:background="@color/cl_f5f5f5"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_marginLeft="@dimen/px_12"
        android:layout_marginTop="@dimen/px_10"
        android:padding="@dimen/px_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tablet"
        android:layout_alignLeft="@+id/relativeLayout"
        android:layout_alignStart="@+id/relativeLayout">
        <CheckBox
            android:padding="@dimen/px_20"
            android:checked="true"
            android:id="@+id/checkbox"
            android:button="@null"
            android:background="@drawable/checkbox_style"
            android:layout_width="@dimen/px_44"
            android:layout_height="@dimen/px_44" />
        <TextView
            android:layout_marginLeft="@dimen/px_20"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/checkbox"
            android:id="@+id/nin"
            android:textSize="@dimen/px_26"
            android:textColor="@color/cl_333333"
            android:text="@string/you_have_read_and_agreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="@dimen/px_20"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/nin"
            android:textSize="@dimen/px_26"
            android:textColor="@color/cl_6fd1c8"
            android:text="@string/user_tk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <com.example.me_jie.snailexpress_staff.custom.SwitchView
        android:id="@+id/slide_switch_btn"
        android:layout_marginTop="@dimen/px_100"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/px_280"
        android:layout_height="@dimen/px_80" />
    <RelativeLayout
        android:layout_marginTop="@dimen/px_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginLeft="@dimen/px_32"
            android:text="@string/login"
            android:textSize="@dimen/px_32"
            android:textColor="@color/white"
            android:background="@drawable/is_forbidden"
            android:id="@+id/login_btn"
            android:layout_width="@dimen/px_280"
            android:layout_height="@dimen/px_80" />
        <Button
            android:layout_marginRight="@dimen/px_32"
            android:layout_alignParentRight="true"
            android:text="@string/register"
            android:textSize="@dimen/px_32"
            android:textColor="@color/cl_666666"
            android:background="@drawable/button_transparency_shape"
            android:id="@+id/register_btn"
            android:layout_width="@dimen/px_280"
            android:layout_height="@dimen/px_80" />
    </RelativeLayout>
    </LinearLayout>
</LinearLayout>
